add key to gitignore and test ops-cluster-1

--- a/deploy/kubeip-deployment.yaml
+++ b/deploy/kubeip-deployment.yaml
@@ -19,7 +19,7 @@ spec:
       spec:
         priorityClassName: system-cluster-critical
         nodeSelector:
-          cloud.google.com/gke-nodepool: pool-kubip
+          cloud.google.com/gke-nodepool: kube-ip-pool-1
         containers:
         - name: "kubeip"
           image: doitintl/kubeip:latest
