--- a/deploy/kubeip-configmap.yaml
+++ b/deploy/kubeip-configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 data:
   KUBEIP_LABELKEY: "kubeip"
-  KUBEIP_LABELVALUE: "reserved"
+  KUBEIP_LABELVALUE: "pt-de-ops-cluster-1"
   KUBEIP_NODEPOOL: "default-pool"
   KUBEIP_FORCEASSIGNMENT: "true"
   KUBEIP_ADDITIONALNODEPOOLS: ""
